// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`app route registration contract > pins readable demo and auth-enabled route manifests > authenticated route manifest 1`] = `
[
  "ALL /*",
  "ALL /*",
  "ALL /*",
  "GET /health",
  "GET /api/auth/setup-required",
  "POST /api/auth/setup",
  "POST /api/auth/redeem-invite",
  "ALL /api/auth/sign-up/email",
  "POST /api/auth/*",
  "GET /api/auth/*",
  "ALL /api/v1/*",
  "ALL /api/datasets/:datasetId/examples",
  "ALL /api/traces/manual",
  "ALL /api/trace-tests",
  "ALL /api/trace-tests/*",
  "ALL /api/v1/*",
  "ALL /api/*",
  "ALL /api/governed-review/*",
  "GET /api/governed-review/instructions",
  "POST /api/governed-review/instructions",
  "GET /api/governed-review/subjects",
  "POST /api/governed-review/sealed-intakes",
  "GET /api/governed-review/imported-truth",
  "POST /api/governed-review/imported-truth",
  "GET /api/governed-review/batches",
  "POST /api/governed-review/batches",
  "GET /api/governed-review/batches/:batchId",
  "POST /api/governed-review/batches/:batchId/open",
  "POST /api/governed-review/batches/:batchId/close-labeling",
  "POST /api/governed-review/batches/:batchId/alignment/open",
  "POST /api/governed-review/batches/:batchId/adjudication/start",
  "POST /api/governed-review/batches/:batchId/finalize",
  "POST /api/governed-review/batches/:batchId/freeze",
  "GET /api/governed-review/tasks",
  "GET /api/governed-review/tasks/:taskId/view",
  "POST /api/governed-review/tasks/:taskId/defer",
  "POST /api/governed-review/tasks/:taskId/resume",
  "POST /api/governed-review/tasks/:taskId/labels",
  "POST /api/governed-review/tasks/:taskId/withdraw",
  "GET /api/governed-review/batches/:batchId/items/:itemId/alignment",
  "POST /api/governed-review/batches/:batchId/alignment/events",
  "GET /api/governed-review/batches/:batchId/items/:itemId/adjudication",
  "POST /api/governed-review/batches/:batchId/items/:itemId/adjudications",
  "ALL /api/binary-calibration-runs/*",
  "GET /api/binary-calibration-runs",
  "POST /api/binary-calibration-runs",
  "GET /api/binary-calibration-runs/:runId",
  "ALL /api/v1/binary-calibration-artifacts/*",
  "GET /api/v1/binary-calibration-artifacts/:artifactId",
  "GET /api/v1/binary-calibration-artifacts/:artifactId/status",
  "ALL /api/analysis-populations/*",
  "ALL /api/analysis-populations/*",
  "POST /api/analysis-populations",
  "GET /api/analysis-populations",
  "GET /api/analysis-populations/:populationId/members",
  "GET /api/analysis-populations/:populationId/selections",
  "GET /api/analysis-populations/:populationId/exclusions",
  "GET /api/analysis-populations/:populationId/overlaps",
  "GET /api/analysis-populations/:populationId/selections/:drawPosition/content",
  "GET /api/analysis-populations/:populationId",
  "ALL /api/analysis-studies/*",
  "ALL /api/analysis-studies/*",
  "POST /api/analysis-studies",
  "GET /api/analysis-studies",
  "POST /api/analysis-studies/:studyId/open",
  "POST /api/analysis-studies/:studyId/close",
  "POST /api/analysis-studies/:studyId/complete",
  "POST /api/analysis-studies/:studyId/abandon",
  "GET /api/analysis-studies/:studyId/items",
  "GET /api/analysis-studies/:studyId/items/:studyItemId/events",
  "POST /api/analysis-studies/:studyId/items/:studyItemId/events",
  "GET /api/analysis-studies/:studyId/items/:studyItemId/content",
  "GET /api/analysis-studies/:studyId/coverage",
  "GET /api/analysis-studies/:studyId",
  "ALL /api/analysis-taxonomies/*",
  "ALL /api/analysis-taxonomies/*",
  "POST /api/analysis-taxonomies",
  "GET /api/analysis-taxonomies",
  "GET /api/analysis-taxonomies/:taxonomyId/revisions",
  "GET /api/analysis-taxonomies/:taxonomyId/revisions/:revisionId",
  "POST /api/analysis-taxonomies/:taxonomyId/revisions",
  "GET /api/analysis-taxonomies/:taxonomyId/assignments/:observationEventId",
  "POST /api/analysis-taxonomies/:taxonomyId/assignments",
  "ALL /api/analysis-promotions/*",
  "ALL /api/analysis-promotions/*",
  "POST /api/analysis-promotions",
  "GET /api/analysis-promotions/candidates",
  "GET /api/analysis-promotions",
  "GET /api/analysis-promotions/:promotionId/supports",
  "GET /api/analysis-promotions/:promotionId",
  "ALL /api/evaluator-lifecycles/*",
  "ALL /api/evaluator-lifecycles/*",
  "POST /api/evaluator-lifecycles/candidates",
  "GET /api/evaluator-lifecycles",
  "GET /api/evaluator-lifecycles/:skillVersionId",
  "POST /api/evaluator-lifecycles/:skillVersionId/activate",
  "POST /api/evaluator-lifecycles/:skillVersionId/retire",
  "GET /api/evaluator-lifecycles/:skillVersionId/resolution",
  "POST /api/evaluator-lifecycles/:skillVersionId/resolution",
  "ALL /api/analysis-measurements/*",
  "GET /api/analysis-measurements/:studyId",
  "ALL /api/production-calibration/*",
  "POST /api/production-calibration/preview",
  "POST /api/production-calibration/report",
  "POST /api/production-calibration/snapshots",
  "GET /api/production-calibration/snapshots",
  "GET /api/production-calibration/snapshots/:snapshotId",
  "GET /api/production-calibration/settings",
  "PUT /api/production-calibration/settings",
  "POST /api/production-calibration/records/erase",
  "POST /api/production-calibration/records/purge",
  "DELETE /api/production-calibration/snapshots/:snapshotId",
  "POST /api/production-calibration/records",
  "POST /api/v1/production-decisions",
  "GET /api/projects",
  "POST /api/projects",
  "POST /api/agent-setup/pairings",
  "GET /api/agent-setup/pairings/:pairingId",
  "DELETE /api/agent-setup/pairings/:pairingId",
  "GET /api/judge/providers",
  "GET /api/judge/providers/:provider/models",
  "POST /api/judge/capability-check",
  "GET /api/project/settings",
  "PATCH /api/project/settings",
  "POST /api/project/retention/prune",
  "DELETE /api/project",
  "GET /api/dashboard",
  "GET /api/onboarding/evidence-inventory",
  "GET /api/skills/current",
  "GET /api/skills/:skillId/versions",
  "GET /api/skills/:skillId/versions/:versionId/regression",
  "GET /api/skills/:skillId/versions/:versionId/convergence",
  "GET /api/skills/:skillId/versions/:versionId/self-consistency",
  "GET /api/skills/:skillId/versions/:versionId/card",
  "GET /api/skills/:skillId/versions/:versionId/skill-format",
  "POST /api/skills/:skillId/versions/:versionId/signoff",
  "GET /api/skills/:skillId/versions/:versionId/criterion",
  "POST /api/skills/:skillId/onboarding-check",
  "POST /api/skills/:skillId/versions",
  "POST /api/users/invite",
  "POST /api/traces/manual",
  "POST /api/v1/bootstrap",
  "GET /api/v1/project",
  "GET /api/v1/findings",
  "GET /api/v1/cases",
  "GET /api/v1/golden-set",
  "GET /api/v1/criteria",
  "POST /api/v1/criteria",
  "GET /api/v1/criteria/:criterionId",
  "POST /api/v1/criteria/:criterionId/versions",
  "GET /api/v1/criteria/:criterionId/current-skill",
  "GET /api/v1/evaluator-suites",
  "GET /api/v1/evaluator-suites/:suiteId",
  "GET /api/v1/evaluator-suite-manifests",
  "POST /api/v1/evaluator-suite-manifests",
  "GET /api/v1/evaluator-suite-manifests/:manifestId",
  "POST /api/v1/judge",
  "POST /api/v1/judge/batch",
  "GET /api/v1/eval-runs/:evalRunId/assessment-receipt",
  "GET /api/v1/assessment-receipts/:receiptId",
  "POST /api/v1/eval-runs/:evalRunId/assessment-receipt/comparisons",
  "GET /api/v1/eval-runs/:evalRunId",
  "POST /api/v1/gate-checks",
  "GET /api/v1/gate-checks/:gateCheckId",
  "GET /api/judge-keys",
  "PUT /api/judge-keys/:provider",
  "DELETE /api/judge-keys/:provider",
  "GET /api/api-keys",
  "POST /api/api-keys",
  "DELETE /api/api-keys/:apiKeyId",
  "GET /api/trace-tests",
  "POST /api/trace-tests/assist",
  "POST /api/trace-tests",
  "POST /api/trace-tests/funnel-events",
  "GET /api/trace-tests/:traceTestId",
  "POST /api/trace-tests/:traceTestId/revisions",
  "POST /api/trace-tests/:traceTestId/checks",
  "POST /api/trace-tests/:traceTestId/validations",
  "POST /api/trace-tests/:traceTestId/enable",
  "GET /api/datasets",
  "POST /api/datasets",
  "GET /api/datasets/:datasetId",
  "GET /api/datasets/:datasetId/revisions",
  "POST /api/datasets/:datasetId/revisions",
  "GET /api/dataset-revisions/:revisionId/metadata",
  "GET /api/dataset-revisions/:revisionId",
  "POST /api/datasets/:datasetId/items",
  "POST /api/datasets/:datasetId/examples",
  "DELETE /api/datasets/:datasetId/items/:itemId",
  "POST /api/datasets/:datasetId/archive",
  "POST /api/trace-tests/:traceTestId/runs",
  "POST /api/skills/:skillId/versions/:versionId/convergence/runs",
  "POST /api/eval-runs",
  "POST /api/skills/:skillId/versions/:versionId/backfill",
  "GET /api/eval-runs",
  "GET /api/eval-runs/:evalRunId",
  "POST /api/run-comparisons",
  "GET /api/run-comparisons",
  "GET /api/run-comparisons/:comparisonId",
  "GET /api/gate-checks",
  "GET /api/gate-checks/:gateCheckId",
  "GET /api/import-jobs",
  "GET /api/integrations/langsmith",
  "POST /api/integrations/langsmith",
  "PATCH /api/integrations/langsmith/:integrationId",
  "DELETE /api/integrations/langsmith/:integrationId",
  "POST /api/integrations/langsmith/:integrationId/test",
  "POST /api/integrations/langsmith/:integrationId/import",
  "GET /api/integrations/langfuse",
  "POST /api/integrations/langfuse",
  "PATCH /api/integrations/langfuse/:integrationId",
  "DELETE /api/integrations/langfuse/:integrationId",
  "POST /api/integrations/langfuse/:integrationId/test",
  "POST /api/integrations/langfuse/:integrationId/import",
  "GET /api/integrations/ironside",
  "POST /api/integrations/ironside",
  "PATCH /api/integrations/ironside/:integrationId",
  "DELETE /api/integrations/ironside/:integrationId",
  "POST /api/integrations/ironside/:integrationId/test",
  "POST /api/integrations/ironside/:integrationId/import",
  "GET /api/feedback-syncs",
  "GET /api/links/trace",
  "GET /api/cases/:caseId/source-link",
  "GET /api/cases/:caseId",
  "POST /api/cases/:caseId/promote",
  "POST /api/cases/:caseId/verdicts",
  "POST /api/cases/:caseId/adjudicate",
  "GET /api/cases/:caseId/verdicts",
  "GET /api/golden-set",
  "GET /api/trust-digest",
  "GET /api/golden-set/health",
  "GET /api/projects/kappa",
  "GET /api/projects/judge-human-calibration",
  "GET /api/projects/disagreements",
  "GET /api/projects/judge-human-disagreements",
  "GET /api/projects/verdicts",
  "GET /api/projects/verdicts/export",
  "POST /api/review-queues",
  "GET /api/review-queues",
  "GET /api/review-queues/:queueId",
  "GET /api/review-queues/:queueId/next",
  "POST /api/review-queues/:queueId/items",
  "POST /api/review-queues/:queueId/close",
  "POST /api/review-queues/:queueId/reopen",
  "POST /api/golden-set/:entryId/retire",
]
`;

exports[`app route registration contract > pins readable demo and auth-enabled route manifests > demo route manifest 1`] = `
[
  "ALL /*",
  "ALL /*",
  "ALL /*",
  "GET /health",
  "GET /api/auth/setup-required",
  "POST /api/auth/setup",
  "POST /api/auth/redeem-invite",
  "ALL /api/auth/sign-up/email",
  "ALL /api/v1/*",
  "ALL /api/datasets/:datasetId/examples",
  "ALL /api/traces/manual",
  "ALL /api/trace-tests",
  "ALL /api/trace-tests/*",
  "ALL /api/v1/*",
  "ALL /api/*",
  "ALL /api/governed-review/*",
  "GET /api/governed-review/instructions",
  "POST /api/governed-review/instructions",
  "GET /api/governed-review/subjects",
  "POST /api/governed-review/sealed-intakes",
  "GET /api/governed-review/imported-truth",
  "POST /api/governed-review/imported-truth",
  "GET /api/governed-review/batches",
  "POST /api/governed-review/batches",
  "GET /api/governed-review/batches/:batchId",
  "POST /api/governed-review/batches/:batchId/open",
  "POST /api/governed-review/batches/:batchId/close-labeling",
  "POST /api/governed-review/batches/:batchId/alignment/open",
  "POST /api/governed-review/batches/:batchId/adjudication/start",
  "POST /api/governed-review/batches/:batchId/finalize",
  "POST /api/governed-review/batches/:batchId/freeze",
  "GET /api/governed-review/tasks",
  "GET /api/governed-review/tasks/:taskId/view",
  "POST /api/governed-review/tasks/:taskId/defer",
  "POST /api/governed-review/tasks/:taskId/resume",
  "POST /api/governed-review/tasks/:taskId/labels",
  "POST /api/governed-review/tasks/:taskId/withdraw",
  "GET /api/governed-review/batches/:batchId/items/:itemId/alignment",
  "POST /api/governed-review/batches/:batchId/alignment/events",
  "GET /api/governed-review/batches/:batchId/items/:itemId/adjudication",
  "POST /api/governed-review/batches/:batchId/items/:itemId/adjudications",
  "ALL /api/binary-calibration-runs/*",
  "GET /api/binary-calibration-runs",
  "POST /api/binary-calibration-runs",
  "GET /api/binary-calibration-runs/:runId",
  "ALL /api/v1/binary-calibration-artifacts/*",
  "GET /api/v1/binary-calibration-artifacts/:artifactId",
  "GET /api/v1/binary-calibration-artifacts/:artifactId/status",
  "ALL /api/analysis-populations/*",
  "ALL /api/analysis-populations/*",
  "POST /api/analysis-populations",
  "GET /api/analysis-populations",
  "GET /api/analysis-populations/:populationId/members",
  "GET /api/analysis-populations/:populationId/selections",
  "GET /api/analysis-populations/:populationId/exclusions",
  "GET /api/analysis-populations/:populationId/overlaps",
  "GET /api/analysis-populations/:populationId/selections/:drawPosition/content",
  "GET /api/analysis-populations/:populationId",
  "ALL /api/analysis-studies/*",
  "ALL /api/analysis-studies/*",
  "POST /api/analysis-studies",
  "GET /api/analysis-studies",
  "POST /api/analysis-studies/:studyId/open",
  "POST /api/analysis-studies/:studyId/close",
  "POST /api/analysis-studies/:studyId/complete",
  "POST /api/analysis-studies/:studyId/abandon",
  "GET /api/analysis-studies/:studyId/items",
  "GET /api/analysis-studies/:studyId/items/:studyItemId/events",
  "POST /api/analysis-studies/:studyId/items/:studyItemId/events",
  "GET /api/analysis-studies/:studyId/items/:studyItemId/content",
  "GET /api/analysis-studies/:studyId/coverage",
  "GET /api/analysis-studies/:studyId",
  "ALL /api/analysis-taxonomies/*",
  "ALL /api/analysis-taxonomies/*",
  "POST /api/analysis-taxonomies",
  "GET /api/analysis-taxonomies",
  "GET /api/analysis-taxonomies/:taxonomyId/revisions",
  "GET /api/analysis-taxonomies/:taxonomyId/revisions/:revisionId",
  "POST /api/analysis-taxonomies/:taxonomyId/revisions",
  "GET /api/analysis-taxonomies/:taxonomyId/assignments/:observationEventId",
  "POST /api/analysis-taxonomies/:taxonomyId/assignments",
  "ALL /api/analysis-promotions/*",
  "ALL /api/analysis-promotions/*",
  "POST /api/analysis-promotions",
  "GET /api/analysis-promotions/candidates",
  "GET /api/analysis-promotions",
  "GET /api/analysis-promotions/:promotionId/supports",
  "GET /api/analysis-promotions/:promotionId",
  "ALL /api/evaluator-lifecycles/*",
  "ALL /api/evaluator-lifecycles/*",
  "POST /api/evaluator-lifecycles/candidates",
  "GET /api/evaluator-lifecycles",
  "GET /api/evaluator-lifecycles/:skillVersionId",
  "POST /api/evaluator-lifecycles/:skillVersionId/activate",
  "POST /api/evaluator-lifecycles/:skillVersionId/retire",
  "GET /api/evaluator-lifecycles/:skillVersionId/resolution",
  "POST /api/evaluator-lifecycles/:skillVersionId/resolution",
  "ALL /api/analysis-measurements/*",
  "GET /api/analysis-measurements/:studyId",
  "ALL /api/production-calibration/*",
  "POST /api/production-calibration/preview",
  "POST /api/production-calibration/report",
  "POST /api/production-calibration/snapshots",
  "GET /api/production-calibration/snapshots",
  "GET /api/production-calibration/snapshots/:snapshotId",
  "GET /api/production-calibration/settings",
  "PUT /api/production-calibration/settings",
  "POST /api/production-calibration/records/erase",
  "POST /api/production-calibration/records/purge",
  "DELETE /api/production-calibration/snapshots/:snapshotId",
  "POST /api/production-calibration/records",
  "POST /api/v1/production-decisions",
  "GET /api/projects",
  "POST /api/projects",
  "POST /api/agent-setup/pairings",
  "GET /api/agent-setup/pairings/:pairingId",
  "DELETE /api/agent-setup/pairings/:pairingId",
  "GET /api/judge/providers",
  "GET /api/judge/providers/:provider/models",
  "POST /api/judge/capability-check",
  "GET /api/project/settings",
  "PATCH /api/project/settings",
  "POST /api/project/retention/prune",
  "DELETE /api/project",
  "GET /api/dashboard",
  "GET /api/onboarding/evidence-inventory",
  "GET /api/skills/current",
  "GET /api/skills/:skillId/versions",
  "GET /api/skills/:skillId/versions/:versionId/regression",
  "GET /api/skills/:skillId/versions/:versionId/convergence",
  "GET /api/skills/:skillId/versions/:versionId/self-consistency",
  "GET /api/skills/:skillId/versions/:versionId/card",
  "GET /api/skills/:skillId/versions/:versionId/skill-format",
  "POST /api/skills/:skillId/versions/:versionId/signoff",
  "GET /api/skills/:skillId/versions/:versionId/criterion",
  "POST /api/skills/:skillId/onboarding-check",
  "POST /api/skills/:skillId/versions",
  "POST /api/users/invite",
  "POST /api/traces/manual",
  "POST /api/v1/bootstrap",
  "GET /api/v1/project",
  "GET /api/v1/findings",
  "GET /api/v1/cases",
  "GET /api/v1/golden-set",
  "GET /api/v1/criteria",
  "POST /api/v1/criteria",
  "GET /api/v1/criteria/:criterionId",
  "POST /api/v1/criteria/:criterionId/versions",
  "GET /api/v1/criteria/:criterionId/current-skill",
  "GET /api/v1/evaluator-suites",
  "GET /api/v1/evaluator-suites/:suiteId",
  "GET /api/v1/evaluator-suite-manifests",
  "POST /api/v1/evaluator-suite-manifests",
  "GET /api/v1/evaluator-suite-manifests/:manifestId",
  "POST /api/v1/judge",
  "POST /api/v1/judge/batch",
  "GET /api/v1/eval-runs/:evalRunId/assessment-receipt",
  "GET /api/v1/assessment-receipts/:receiptId",
  "POST /api/v1/eval-runs/:evalRunId/assessment-receipt/comparisons",
  "GET /api/v1/eval-runs/:evalRunId",
  "POST /api/v1/gate-checks",
  "GET /api/v1/gate-checks/:gateCheckId",
  "GET /api/judge-keys",
  "PUT /api/judge-keys/:provider",
  "DELETE /api/judge-keys/:provider",
  "GET /api/api-keys",
  "POST /api/api-keys",
  "DELETE /api/api-keys/:apiKeyId",
  "GET /api/trace-tests",
  "POST /api/trace-tests/assist",
  "POST /api/trace-tests",
  "POST /api/trace-tests/funnel-events",
  "GET /api/trace-tests/:traceTestId",
  "POST /api/trace-tests/:traceTestId/revisions",
  "POST /api/trace-tests/:traceTestId/checks",
  "POST /api/trace-tests/:traceTestId/validations",
  "POST /api/trace-tests/:traceTestId/enable",
  "GET /api/datasets",
  "POST /api/datasets",
  "GET /api/datasets/:datasetId",
  "GET /api/datasets/:datasetId/revisions",
  "POST /api/datasets/:datasetId/revisions",
  "GET /api/dataset-revisions/:revisionId/metadata",
  "GET /api/dataset-revisions/:revisionId",
  "POST /api/datasets/:datasetId/items",
  "POST /api/datasets/:datasetId/examples",
  "DELETE /api/datasets/:datasetId/items/:itemId",
  "POST /api/datasets/:datasetId/archive",
  "POST /api/trace-tests/:traceTestId/runs",
  "POST /api/skills/:skillId/versions/:versionId/convergence/runs",
  "POST /api/eval-runs",
  "POST /api/skills/:skillId/versions/:versionId/backfill",
  "GET /api/eval-runs",
  "GET /api/eval-runs/:evalRunId",
  "POST /api/run-comparisons",
  "GET /api/run-comparisons",
  "GET /api/run-comparisons/:comparisonId",
  "GET /api/gate-checks",
  "GET /api/gate-checks/:gateCheckId",
  "GET /api/import-jobs",
  "GET /api/integrations/langsmith",
  "POST /api/integrations/langsmith",
  "PATCH /api/integrations/langsmith/:integrationId",
  "DELETE /api/integrations/langsmith/:integrationId",
  "POST /api/integrations/langsmith/:integrationId/test",
  "POST /api/integrations/langsmith/:integrationId/import",
  "GET /api/integrations/langfuse",
  "POST /api/integrations/langfuse",
  "PATCH /api/integrations/langfuse/:integrationId",
  "DELETE /api/integrations/langfuse/:integrationId",
  "POST /api/integrations/langfuse/:integrationId/test",
  "POST /api/integrations/langfuse/:integrationId/import",
  "GET /api/integrations/ironside",
  "POST /api/integrations/ironside",
  "PATCH /api/integrations/ironside/:integrationId",
  "DELETE /api/integrations/ironside/:integrationId",
  "POST /api/integrations/ironside/:integrationId/test",
  "POST /api/integrations/ironside/:integrationId/import",
  "GET /api/feedback-syncs",
  "GET /api/links/trace",
  "GET /api/cases/:caseId/source-link",
  "GET /api/cases/:caseId",
  "POST /api/cases/:caseId/promote",
  "POST /api/cases/:caseId/verdicts",
  "POST /api/cases/:caseId/adjudicate",
  "GET /api/cases/:caseId/verdicts",
  "GET /api/golden-set",
  "GET /api/trust-digest",
  "GET /api/golden-set/health",
  "GET /api/projects/kappa",
  "GET /api/projects/judge-human-calibration",
  "GET /api/projects/disagreements",
  "GET /api/projects/judge-human-disagreements",
  "GET /api/projects/verdicts",
  "GET /api/projects/verdicts/export",
  "POST /api/review-queues",
  "GET /api/review-queues",
  "GET /api/review-queues/:queueId",
  "GET /api/review-queues/:queueId/next",
  "POST /api/review-queues/:queueId/items",
  "POST /api/review-queues/:queueId/close",
  "POST /api/review-queues/:queueId/reopen",
  "POST /api/golden-set/:entryId/retire",
]
`;
